--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="audio/1.06PalletTownTheme.mp3" type="audio/mpeg">
+    <source src="audio/1-20. Pokémon Gym.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
